// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render UserCard component properly when post not provided 1`] = `
<Link
  replace={false}
  to="/undefined/read/"
>
  <div
    className="usercard__container"
  >
    <div
      className="usercard__avatar"
    >
      <img
        alt="user2's avatar"
        className="image image--circle"
        src="http://www.perlworkshop.nl/nlpw2016/img/default-avatar.png"
      />
    </div>
    <div
      className="usercard__infos"
    >
      <div
        className="usercard__infos--data"
      >
        <h4
          className="usercard__infos--data--author"
        >
          user2
        </h4>
        <p>
           
          20
           
          <i
            className="fa fa-star"
          />
        </p>
      </div>
      <div
        className="usercard__infos--description"
      >
        <p>
          User2 description
        </p>
      </div>
    </div>
  </div>
</Link>
`;

exports[`should render UserCard component properly when post provided 1`] = `
<Link
  replace={false}
  to="/author2Id/read/"
>
  <div
    className="usercard__container"
  >
    <div
      className="usercard__avatar"
    >
      <img
        alt="user2's avatar"
        className="image image--circle"
        src="http://www.perlworkshop.nl/nlpw2016/img/default-avatar.png"
      />
    </div>
    <div
      className="usercard__infos"
    >
      <div
        className="usercard__infos--data"
      >
        <h4
          className="usercard__infos--data--author"
        >
          user2
        </h4>
        <p>
           
          20
           
          <i
            className="fa fa-star"
          />
        </p>
      </div>
      <div
        className="usercard__infos--description"
      >
        <p>
          User2 description
        </p>
      </div>
    </div>
  </div>
</Link>
`;
